# CursosBackendPython

./: .gitignore  LeoSanMac  LeoSanMac.pub  README.md  curso.js  temporal_pep8.md
02_DesarrolloBackendPythonDjango_2025_Avanzado/04_ArquitecturaProyectosEntornosPyPI/PRACTICAS/NotiNews/: .env.example  .gitignore  Makefile  README.md  SETUP_UV.md  pyproject.toml  run_tests.py
02_DesarrolloBackendPythonDjango_2025_Avanzado/04_ArquitecturaProyectosEntornosPyPI/PRACTICAS/NotiNews/docs/: TECHNICAL_DETAILS.md
02_DesarrolloBackendPythonDjango_2025_Avanzado/04_ArquitecturaProyectosEntornosPyPI/PRACTICAS/NotiNews/mypy-report/: index.html
02_DesarrolloBackendPythonDjango_2025_Avanzado/04_ArquitecturaProyectosEntornosPyPI/PRACTICAS/NotiNews/mypy-report/html/src/noti_news/: __init__.py.html  config.py.html  (+1 more)
02_DesarrolloBackendPythonDjango_2025_Avanzado/04_ArquitecturaProyectosEntornosPyPI/PRACTICAS/NotiNews/src/noti_news/: config.py  main.py
02_DesarrolloBackendPythonDjango_2025_Avanzado/04_ArquitecturaProyectosEntornosPyPI/PRACTICAS/NotiNews/src/noti_news/analysis/: analyzer.py
02_DesarrolloBackendPythonDjango_2025_Avanzado/04_ArquitecturaProyectosEntornosPyPI/PRACTICAS/NotiNews/src/noti_news/core/: exceptions.py  models.py  services.py
02_DesarrolloBackendPythonDjango_2025_Avanzado/04_ArquitecturaProyectosEntornosPyPI/PRACTICAS/NotiNews/src/noti_news/io/: cli.py  display.py
02_DesarrolloBackendPythonDjango_2025_Avanzado/04_ArquitecturaProyectosEntornosPyPI/PRACTICAS/NotiNews/src/noti_news/sources/: newsapi.py
02_DesarrolloBackendPythonDjango_2025_Avanzado/04_ArquitecturaProyectosEntornosPyPI/PRACTICAS/NotiNews/tests/: test_analyzer.py  test_cli.py  test_config.py  test_display.py  test_exceptions.py  test_models.py  test_news_sources.py  verify_gemini.py
(+257 files in other folders)
