[project]
name = "NotiNews"
version = "0.1.0"
description = "CLI app que permite buscar noticias usando news api y contrastandola con geminis"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Leonard Jose Cuenca Roa", email = "cuenca623@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.1.0",
    "rich>=13.0.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "ruff>=0.14.8",
]

[project.scripts]
noti-news = "noti_news.main:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# E: pycodestyle errors
# W: pycodestyle warnings
# F: pyflakes
# I: isort (imports sorting)
# B: flake8-bugbear (common bugs)
# UP: pyupgrade (modernize syntax)
select = ["E", "W", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
]
